SE CAMBIO EL LA FRASE DE TRABAJEMOS JUNTOS A PONTE EN CONTACTO

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
     <section class="contact__me">
         <h2 class="contact__link">
-            <a href="formulario.html">¡Trabajemos juntos!</a></h2>
+            <a href="formulario.html">¡Ponte en contacto!</a></h2>
     </section>   
     <!-- Aca va a ir el pie de pagina -->
     <footer class="footer">
