--- a/portafolio.html
+++ b/portafolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <meta name="description" content="Hola, soy Cristel, diseñadora gráfica y realizo diseños con impacto para marcas independientes.">
     <meta name="keywords"  content="DESIGN, BRANDING, ART, UX, DIGITAL DESIGN, PORTFOLIO">
     <link rel="preconnect" href="https://fonts.gstatic.com">
