--- a/formulario.html
+++ b/formulario.html
@@ -6,75 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hola, soy Cristel, diseñadora gráfica y realizo diseños con impacto para marcas independientes.">
     <meta name="keywords"  content="DESIGN, BRANDING, ART, UX, DIGITAL DESIGN, PORTFOLIO">
-    <link rel="stylesheet" href="css/estilo.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
-      </style> 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    </style> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Contáctame</title>
 </head>
 <body>
     <header>
-        <a class="nav__logo" href="index.html">CRISTEL TAPIA</a>
+        <a class="nav__logo" href="index.html"> CRISTEL TAPIA </a>
           <nav class="nav">  
               <ul class="nav__ul">
-                  <li class="nav__li"><a href="portafolio.html">PORTAFOLIO</a>
+                  <li class="nav__li"><a href="portafolio.html"> PORTAFOLIO </a>
                       <ul>
-                          <li><a href="portafolio.html#branding">Branding</li></a>
-                          <li><a href="portafolio.html#UXUI">UX/UI</li></a>
+                          <li><a href="portafolio.html#branding"> Branding</li></a>
+                          <li><a href="portafolio.html#UXUI"> UX/UI</li></a>
                           <li><a href="portafolio.html#digital">Digital</li></a>
                       </ul>				
                   </li>
-                  <li class="nav__li"><a href="sobre_mi.html">SOBRE MI</a></li>
-                  <li class="nav__li"><a href="formulario.html">CONTACTO</a></li>
+                  <li class="nav__li"><a href="sobre_mi.html"> SOBRE MI </a></li>
+                  <li class="nav__li"><a href="formulario.html"> CONTACTO </a></li>
                   </li>
               </ul>
           </nav>
       </header>
     <!-- Contenido Principal -->
-    <main>
-        <h1>¡Trabajemos juntos!</h1>
-        <p>Déjame un mensaje y te responderé a la brevedad :)</p>
-        <form action="#" method="GET">
-            <fieldset>
-                <legend>Contáctame</legend>
-                <input type="text" placeholder="Nombre">
-                <br>
-                <br>
-                <input type="text" placeholder="Apellido">
-                <br>
-                <br>
-                <input type="tel" placeholder="Celular" required>
-                <br>
-                <br>
-                <input type="email" id="email" placeholder="Email">
-                <br>
-                <br>
-                <fieldset>Elige un tipo de trabajo
-                    <select name="cantidad">
-                        <option value="solo">Branding</option>
-                        <option value="acompaniado">UX/UI</option>
-                        <option value="familia">Diseño digital</option>
-                        <option value="familia">Otros</option>
-                    </select>
-                </fieldset>
-                <br>
-                <br>
-            <label>Déjame un mensaje</label>
-                <textarea name="consulta" placeholder="¡Hola! Quiero saber..." cols="60" rows="30"></textarea>
-                <br>
-                <br>
-                <input type="checkbox" name="novedades"> Suscríbete a mi newsletter
-                <br>
-                <br>
-                <input type="submit" value="Enviar">
-                <br>
-                <br>
-                <input type="reset" value="Vuelve a llenar el form">
-
+    <main id="formulario">
+        <div class="contactForm">
+        <h1>CONTACTO</h1>
+        <p>Te invito a completar el formulario de consulta a continuación con el mayor detalle posible y trataré de responderte dentro de 3-5 días hábiles. Tenga en cuenta que es posible que esté completamente reservado y trabaje en una lista de espera basada en proyectos. Alternativamente, puede enviarme un correo electrónico a
+            cristel.tch@gmail.com</p>
+        </div>
+        <form id="form" class="topBefore">
+            <input id="name" type="text" placeholder="NOMBRE">
+            <input id="email" type="text" placeholder="E-MAIL">
+            <fieldset>Elige un tipo de trabajo
+                <select name="quantity">
+                    <option value="branding">Branding</option>
+                    <option value="ux">UX/UI</option>
+                    <option value="digital">Diseño digital</option>
+                    <option value="otros">Otros</option>
+                </select>
             </fieldset>
-        </form>
+            <textarea id="message" type="text" placeholder="MENSAJE"></textarea>
+    <input id="submit" type="submit" value="GO!">
+    
+  </form>
     </main>
 <!-- Pie de pagina -->
 <footer class="footer">
