--- a/portafolio.html
+++ b/portafolio.html
@@ -5,29 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilo.css">
     <meta name="description" content="Hola, soy Cristel, diseñadora gráfica y realizo diseños con impacto para marcas independientes.">
     <meta name="keywords"  content="DESIGN, BRANDING, ART, UX, DIGITAL DESIGN, PORTFOLIO">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
+    </style> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilo.css">
+    <title>Cristel Tapia Portafolio</title>
     <title>Portafolio</title>
 </head>
 
 <body>
     <!-- Aca va a ir el encabezado -->
     <header>
-        <a class="nav__logo" href="index.html">CRISTEL TAPIA</a>
+        <a class="nav__logo" href="index.html"> CRISTEL TAPIA </a>
           <nav class="nav">  
               <ul class="nav__ul">
-                  <li class="nav__li"><a href="portafolio.html">PORTAFOLIO</a>
+                  <li class="nav__li"><a href="portafolio.html"> PORTAFOLIO </a>
                       <ul>
-                          <li><a href="portafolio.html#branding">Branding</li></a>
-                          <li><a href="portafolio.html#UXUI">UX/UI</li></a>
+                          <li><a href="portafolio.html#branding"> Branding</li></a>
+                          <li><a href="portafolio.html#UXUI"> UX/UI</li></a>
                           <li><a href="portafolio.html#digital">Digital</li></a>
                       </ul>				
                   </li>
-                  <li class="nav__li"><a href="sobre_mi.html">SOBRE MI</a></li>
-                  <li class="nav__li"><a href="formulario.html">CONTACTO</a></li>
+                  <li class="nav__li"><a href="sobre_mi.html"> SOBRE MI </a></li>
+                  <li class="nav__li"><a href="formulario.html"> CONTACTO </a></li>
                   </li>
               </ul>
           </nav>
