--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -5,45 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilo.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <meta name="description" content="Hola, soy Cristel, diseñadora gráfica y realizo diseños con impacto para marcas independientes.">
     <meta name="keywords"  content="DESIGN, BRANDING, ART, UX, DIGITAL DESIGN, PORTFOLIO">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
-      </style>    
-    <title>Sobre mí</title>
+    </style> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilo.css">
+    <title>Cristel Tapia Portafolio</title>
 </head>
 
 <body>
     <!-- Aca va a ir el encabezado -->
     <header>
-        <a class="nav__logo" href="index.html">CRISTEL TAPIA</a>
+        <a class="nav__logo" href="index.html"> CRISTEL TAPIA </a>
           <nav class="nav">  
               <ul class="nav__ul">
-                  <li class="nav__li"><a href="portafolio.html">PORTAFOLIO</a>
+                  <li class="nav__li"><a href="portafolio.html"> PORTAFOLIO </a>
                       <ul>
-                          <li><a href="portafolio.html#branding">Branding</li></a>
-                          <li><a href="portafolio.html#UXUI">UX/UI</li></a>
-                          <li><a href="portafolio.html#digital">Digital</li></a>
+                          <li><a href="portafolio.html#branding"> Branding </li></a>
+                          <li><a href="portafolio.html#UXUI"> UX/UI </li></a>
+                          <li><a href="portafolio.html#digital"> Digital </li></a>
                       </ul>				
                   </li>
-                  <li class="nav__li"><a href="sobre_mi.html">SOBRE MI</a></li>
-                  <li class="nav__li"><a href="formulario.html">CONTACTO</a></li>
+                  <li class="nav__li"><a href="sobre_mi.html"> SOBRE MI </a></li>
+                  <li class="nav__li"><a href="formulario.html"> CONTACTO </a></li>
                   </li>
               </ul>
           </nav>
       </header>
 
     <!-- Contenido principal -->
-    <main>
-        <h1 class="title">soy una diseñadora multifacética</h1>
-        <p>Realizo diseños con impacto para marcas independientes.</p>
-    
+<main>
+<div class="aboutMe">
+<h1 class="title">soy una diseñadora multifacética</h1>
+<p>Realizo diseños con impacto para marcas independientes.</p>
+</div>    
 <section id="miCv">
     <section class="sobreMi">
         <article>
-        <h3>Experiencia</h2>
+        <h3>Experiencia</h3>
         <ul class="experiencia">
             <li class="expUno">
                 <h4>Diseñadora Junior</h4>
