agregar pagina servicios

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
     <section class="contact">
         <h2 class="contact__link">
-            <a href="formulario.html">¿Trabajamos juntos?</a></h2>
+            <a href="servicios.html">¡Mira nuestros servicios!</a></h2>
     </section>   
     <!-- Aca va a ir el pie de pagina -->
     <footer class="footer">
