--- a/servicios.html
+++ b/servicios.html
@@ -12,7 +12,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
     </style> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
     <title>Servicios</title>
 </head>
@@ -103,6 +103,47 @@
             </article>
         </section>
     </section>
+
+    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="texture.jpeg" class="d-block w-100" alt="Testimonio 1">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Valery Ruesta - Learning & Development Analyst en Belcorp</h5>
+              <p>"SUPER RECOMENDABLE. Cris es una persona increíble. A parte de realizar un trabajo estupendo, en todo momento mantuvimos una relación vía teléfono maravillosa, donde ella me compartía sus sensaciones al respeto. En todo momento estuvo apoyando el proyecto como si fuese su propio logo o etiqueta para su empresa, se involucró muchísimo y salieron los resultados deseados.”</p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="texture.jpeg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Mónica Jaramillo - Engagement Analyst en Belcorp</h5>
+              <p>“Ha sido un auténtico placer poder contar con una profesional como Cristel para el rediseño de nuestro logo. Se preocupó por entendernos y nos ayudó con sus propuestas a llegar donde queríamos. Recomiendo tanto su trabajo como su profesionalidad, disciplina y organización.”</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="texture.jpeg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Camila Romero - Creative Director en Camila Viali</h5>
+              <p>“Estamos en deuda contigo desde hace mucho tiempo, ha sido para nosotras un descubrimiento y una gran satisfacción contar con tu ayuda y tu genialidad para traducir en el logo la idea que teníamos en mente al crear nuestra imagen. Trabajar con profesionales como tú, es doblemente grato porque cumples nuestras expectativas por tu trato personal y tu empatía. Acabamos de iniciar el camino y esperamos recorrerlo juntas.”</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+
 </main>
     <!-- Aca va a ir el pie de pagina -->
     <footer class="footer">
@@ -121,6 +162,8 @@
             </li>
         </ol>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 
 </html>
